# StarxEngine

./: CMakeLists.txt  main.cpp
matrixsrc/: matrix_def.h  matrix_pro.h
network/: network.h
src/: dyadic_operation.h  graph.cpp  graph.h  logistic_def.cpp  monadic_operation.h  node.cpp  node.h  polyadic_operation.h  vectormath.h
